# Rumble-Lol-Extension

./: .gitignore  CMakeLists.txt  CONTRIBUTING.MD  LICENSE.md  Makefile  README.md  Rumble LoL Extension.vcxproj  Rumble LoL Extension.vcxproj.filters  alias.sh  clang-x86_64_windows_gnu.cmake  main.cpp  rumble_lol_extension_plugin.py
.cache/clangd/index/: RumbleLeague.cpp.4A13D8337DCC76B8.idx  RumbleLeague.hpp.14E42B7604E401CD.idx  api_buttons.hpp.E1A0D833C4CDA9F1.idx  attr.h.C2A1ED5CDAE81C0B.idx  base.hpp.F1CCD67A71825966.idx  buffer_info.h.F640B4EDB20A9F51.idx  bufferpool.hpp.E916CA267DBDC7DF.idx  button.hpp.1451723D05D73ADE.idx  cast.h.913A7F5CFE5A33C1.idx  check.hpp.9F5F28F4FF535CA4.idx  class.h.2B6102631727D311.idx  common.h.BAA93509009FE02E.idx  core.hpp.F07E20B9B08A2269.idx  cv_cpu_dispatch.h.65E1C53D9E85C80A.idx  cvdef.h.CBC7BC671639FCCD.idx  cvstd.hpp.69A811215E5513CA.idx  cvstd.inl.hpp.866C728F5288DFC5.idx  cvstd_wrapper.hpp.5C7B2C10EC8DF5D3.idx  descr.h.DC4E8B17A409A2BF.idx  fast_math.hpp.86EA88F1659D34C5.idx  gil.h.EE8FA0F17FF9BA3B.idx  highgui.hpp.CF8908C5D9F27579.idx  imgcodecs.hpp.A35729C896CC13FB.idx  imgproc.hpp.1111A38567823492.idx  init.h.B7B6E98EC30354D4.idx  interface.h.11F4AF0B2D1F9196.idx  internals.h.3BFF78B64E62582C.idx  mat.hpp.8D2B629FA35FACC8.idx  mat.inl.hpp.1FFEB0D406B07CB9.idx  matx.hpp.E356EC0727595491.idx  motion.cpp.449719788AF39737.idx  motion.hpp.D280DF012107C993.idx  neon_utils.hpp.77A0A65697E9081B.idx  opencv.hpp.C07451B4738DACE0.idx  opencv_modules.hpp.E1B4E5268B90624B.idx  operations.hpp.3579986D7D04842A.idx  optim.hpp.90649EB5B32A1DF8.idx  options.h.712821ABB9F0AC9F.idx  ovx.hpp.24173394C38C2965.idx  persistence.hpp.5A8530821DEC18F6.idx  (+23 more)
.github/: CODEOFCONDUCT.md  CODEOWNERS.md  labeler.yml
.github/workflows/: build_cmake.yml  greetings.yml  labeler.yml  staled_issues_prs.yml  sync_forks.yml
Helpers/: AutoCompile.cpp  StrHelper.cpp  StringHelper.cpp
RumbleLeagueMotion/: RumbleMotion.hpp
RumbleLeagueVision/: RumbleVision.cpp  RumbleVision.h
RumbleMotion/: Source.cpp
Rumble_LoL_Extension.egg-info/: SOURCES.txt
WindowCapture/: WindowCapture.cpp  WindowCapture.h
cmake/: AddOpenCV.cmake  AddPybind11.cmake
code/: CMakeLists.txt
code/rumble_lol_plugin/: CMakeLists.txt  RumbleLeague.cpp  RumbleLeague.hpp
code/rumble_lol_plugin/capture/: window_capture.cpp  window_capture.hpp
code/rumble_lol_plugin/config/: rlp_config.hpp
code/rumble_lol_plugin/ffi/: pybind_conf.cpp  rlp.cpp
code/rumble_lol_plugin/helpers/: string.cpp  string.hpp
code/rumble_lol_plugin/league_client/: api_buttons.hpp  button.cpp  button.hpp  screen.cpp  screen.hpp  screen_identifier.hpp
code/rumble_lol_plugin/motion/: motion.cpp  motion.hpp
code/rumble_lol_plugin/vision/: vision.cpp  vision.hpp
code/rumble_lol_plugin/writer/: writer.cpp  writer.hpp
configuration/: CMakeLists.txt  rlp_config.hpp.in
core/: RumbleLeague.cpp  RumbleLeague.hpp
core/actions/: ActionBuilder.cpp  ActionBuilder.hpp  Actions.cpp  Actions.hpp  ClickScreenButton.cpp  ClickScreenButton.hpp
core/league_client/: LeagueClientButton.cpp  LeagueClientButton.hpp  LeagueClientScreen.cpp  LeagueClientScreen.hpp
core/league_client/actions/: Actions.cpp  Actions.hpp
data/: API_buttons.hpp  constants.hpp
gision/: RumbleVision.cpp  RumbleVision.h
helpers/: EnumTypes.hpp  StringHelper.hpp
include/opencv2_libs/: opencv_core.lib  opencv_highgui.lib  opencv_imgcodecs.lib  opencv_imgproc.lib
motion/: RumbleMotion.cpp  RumbleMotion.hpp
python/: Rumble-LoL-Extension-Python.pyproj  main.py  run_rlp.py
python/c++_bindings/: pyproject.toml  python_linker.cpp  setup.py
python/c++_bindings/Rumble_LoL_Extension.egg-info/: SOURCES.txt
python_mod/: Rumble-LoL-Extension-Python.pyproj  run_rlp.py  setup_rle.py
python_mod/c++_bindings/: python_linker.cpp  setup.py
python_mod/c++_bindings/Rumble_LoL_Extension.egg-info/: PKG-INFO  SOURCES.txt
python_mod/c++_bindings/rumble_league_extension.egg-info/: PKG-INFO  SOURCES.txt
python_mod/env/Scripts/: activate  activate.bat  activate_this.py
vision/: RumbleVision.cpp  RumbleVision.h
window_capture/: WindowCapture.cpp  WindowCapture.h  WindowCapture.hpp
writer/: RumbleWriter.cpp  RumbleWriter.h
x64/Release/: Rumble LoL Extension.vcxproj.FileListAbsolute.txt  rle.exp  rle.ipdb  rle.lib  rle.pyd  rle.pyd.recipe
x64/Release/Rumble L.5638f70f.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Rumble LoL Extension.lastbuildstate  Rumble LoL Extension.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
